--- a/погода/шаблоны/погода/index.html
+++ b/погода/шаблоны/погода/index.html
@@ -7,39 +7,51 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Weather</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'weather/css/style.css' %}">
+    <style>
+       body{
+           background-image: linear-gradient(to right, #000055 , #a2f0ff);
+       }
+       .container{
+           background: #f8f9fa;
+           padding: 60px 60px 60px 0;
+       }
+       .max_sizer{
+           overflow: hidden;
+           max-height: 440px;
+           margin-top: 20px;
+       }
+       #id_name{
+           padding-bottom: 5px;
+       }
+    </style>
 </head>
 <body>
     <div class="container mt-5">
-        <div class="row">
-            <div class="col-5 offset-1">
-                <h1>Погода в вашем городе</h1>
+        <div class="col-5 offset-1">
+                <h1>Weather Finder</h1>
+                <p>Find out the weather forecast for any city</p>
                 <form action="" method="post">
                     {% csrf_token %}
-                    <label for="city">Город</label>
                     {{ form.name }}
-                    <input type="submit" name="send" value="Узнать" class="mt-2 btn btn-danger">
+                    <input type="submit" name="send" value="Get Weather" class=" btn btn-danger">
                 </form>
             </div>
 
-            <div class="col-5 offset-1">
-                <h1>Информация</h1>
-
+       <div class="col-5 offset-1 max_sizer">
                 {% for info in all_info %}
                 <div class="alert alert-info">
                     <div class="row">
                         <div class="col-9">
-                            <b>Город:</b> {{ info.city }}<br>
-                            <b>Температура:</b> {{ info.temp }}<sup>0</sup>
+                            <b>City:</b> {{ info.city }}<br>
+                            <b>Temperature:</b>{{ info.temp }}<sup>0</sup>
                         </div>
                         <div class="col-2 offset-1">
-                            <img src="http://openweathermap.org/img/w/{{ info.icon }}.png" alt="Фото погоды" class="img-thumbnail">
+                            <img src="http://openweathermap.org/img/w/{{ info.icon }}.png" alt="photo" class="img-thumbnail">
                         </div>
                     </div>
                 </div>
                 {% endfor %}
             </div>
-        </div>
     </div>
 </body>
 </html>
